# dazpycheck

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  run
src/dazpycheck/: __init__.py  dazpycheck_test.py  init_test.py  main.py  main_test.py
